panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__enum__test_enum_without_explicit_values_sizeof.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/enum/test_enum_without_explicit_values_sizeof.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_enum_without_explicit_values_sizeof.c"
   (enum E~0
      (enumerators `unsigned int`
         (enumerator A~1 0 `int` 0)
         (enumerator B~2 1 `int` 1)
         (enumerator C~3 2 `int` 2)))
   (tentative-definition external (x~4 `enum E~0 complete` (static x)) ∅)
   (function-definition external stack-size=40
      (main~5 `fn() -> int` (static main))
      (compound-statement
         (enum E2~7
            (enumerators `unsigned int`
               (enumerator X~8 0 `int` 0)
               (enumerator Y~9 1 `int` 1)
               (enumerator Z~10 2 `int` 2)))
         (definition (e2~11 `array<enum E2~7 complete; 4>` @0) ∅)
         (return (truncate `int` @16 (16 `unsigned long` @24))))))

----- stderr -----
