panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__enum__test_error_enum_is_compatible_with_underlying_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/enum/test_error_enum_is_compatible_with_underlying_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_error_enum_is_compatible_with_underlying_type.c"
   (enum E~0
      (enumerators `unsigned int`
         (enumerator A~1 0 `int` 0)
         (enumerator B~2 1 `int` 1)
         (enumerator C~3 2 `int` 2)))
   (function-definition external stack-size=24
      (main~4 `fn() -> int` (static main))
      (compound-statement
         (definition (x~6 `enum E~0 complete` @0) (noop-type-conversion `enum E~0 complete` @0 (0 `int` @0)))
         (expression (1 `int` @4)))))

----- stderr -----
